add final stainless output

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -1732,12 +1732,61 @@ private case class Int64Impl(underlying: BigInt) extends Int64 {
 
 \subsection{Result}
 
-Finally, everything is green and correctly verified.
-\begin{figure}
-	\centering
-		\includegraphics[width=\textwidth]{final_verify_output}
-	\caption{Output of Stainless verification for addition with 0 of Bitcoin-S-Cores CurrencyUnit}
-\end{figure}
+Finally, everything is green and correctly verified. \todo{kai special chars}
+% \begin{lstlisting}[style=scala]
+% [Warning ] The Z3 native interface is not available. Falling back onto smt-z3.
+% [  Info  ]  - Checking cache: 'precond. (call apply(Int64(), 1))' VC for one @69:18...
+% [  Info  ] Cache hit: 'precond. (call apply(Int64(), 1))' VC for one @69:18...
+% [  Info  ]  - Checking cache: 'precond. (call apply(Int64(), bigInt))' VC for apply @52:5...
+% [  Info  ] Cache miss: 'precond. (call apply(Int64(), bigInt))' VC for apply @52:5...
+% [  Info  ]  - Now solving 'precond. (call apply(Int64(), bigInt))' VC for apply @52:5...
+% [  Info  ]  - Result for 'precond. (call apply(Int64(), bigInt))' VC for apply @52:5:
+% [  Info  ]  => VALID
+% [  Info  ]  - Checking cache: 'precond. (call +(underlying(satoshis(thiss)), underlyin ...)' VC for + @14:14...
+% [  Info  ]  - Checking cache: 'postcondition' VC for + @12:3...
+% [  Info  ] Cache hit: 'precond. (call +(underlying(satoshis(thiss)), underlyin ...)' VC for + @14:14...
+% [  Info  ] Cache miss: 'postcondition' VC for + @12:3...
+% [  Info  ]  - Now solving 'postcondition' VC for + @12:3...
+% [  Info  ]  - Result for 'postcondition' VC for + @12:3:
+% [  Info  ]  => VALID
+% [  Info  ]  - Checking cache: 'precond. (call apply(Int64(), -9223372036854775808))' VC for min @71:18...
+% [  Info  ] Cache hit: 'precond. (call apply(Int64(), -9223372036854775808))' VC for min @71:18...
+% [  Info  ]  - Checking cache: 'adt invariant' VC for apply @34:39...
+% [  Info  ] Cache hit: 'adt invariant' VC for apply @34:39...
+% [  Info  ]  - Checking cache: 'precond. (call apply(Int64(), 9223372036854775807))' VC for max @72:18...
+% [  Info  ] Cache hit: 'precond. (call apply(Int64(), 9223372036854775807))' VC for max @72:18...
+% [  Info  ]  - Checking cache: 'adt invariant' VC for apply @79:5...
+% [  Info  ] Cache hit: 'adt invariant' VC for apply @79:5...
+% [  Info  ]  - Checking cache: 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @22:11...
+% [  Info  ] Cache hit: 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @22:11...
+% [  Info  ]  - Checking cache: 'precond. (call apply(Int64(), 0))' VC for zero @68:19...
+% [  Info  ] Cache hit: 'precond. (call apply(Int64(), 0))' VC for zero @68:19...
+% [  Info  ]   ┌───────────────────┐
+% [  Info  ] ╔═╡ stainless summary ╞═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
+% [  Info  ] ║ └───────────────────┘                                                                                                                                                                             ║
+% [  Info  ] ║ +      postcondition                                                 valid             U:smt-z3  ../../../../../bin/../src/main/scala/addition/modified/currency/CurrencyUnits.scala:12:3   0.643 ║
+% [  Info  ] ║ +      precond. (call +(underlying(satoshis(thiss)), underlyin ...)  valid from cache            ../../../../../bin/../src/main/scala/addition/modified/currency/CurrencyUnits.scala:14:14  0.097 ║
+% [  Info  ] ║ +      precond. (call checkResult(thiss, underlying(thiss) + u ...)  valid from cache            ../../../../../bin/../src/main/scala/addition/modified/number/NumberType.scala:22:11       0.015 ║
+% [  Info  ] ║ apply  adt invariant                                                 valid from cache            ../../../../../bin/../src/main/scala/addition/modified/currency/CurrencyUnits.scala:34:39  0.005 ║
+% [  Info  ] ║ apply  precond. (call apply(Int64(), bigInt))                        valid             U:smt-z3  ../../../../../bin/../src/main/scala/addition/modified/number/NumberType.scala:52:5        0.187 ║
+% [  Info  ] ║ apply  adt invariant                                                 valid from cache            ../../../../../bin/../src/main/scala/addition/modified/number/NumberType.scala:79:5        0.017 ║
+% [  Info  ] ║ max    precond. (call apply(Int64(), 9223372036854775807))           valid from cache            ../../../../../bin/../src/main/scala/addition/modified/number/NumberType.scala:72:18       0.001 ║
+% [  Info  ] ║ min    precond. (call apply(Int64(), -9223372036854775808))          valid from cache            ../../../../../bin/../src/main/scala/addition/modified/number/NumberType.scala:71:18       0.001 ║
+% [  Info  ] ║ one    precond. (call apply(Int64(), 1))                             valid from cache            ../../../../../bin/../src/main/scala/addition/modified/number/NumberType.scala:69:18       0.915 ║
+% [  Info  ] ║ zero   precond. (call apply(Int64(), 0))                             valid from cache            ../../../../../bin/../src/main/scala/addition/modified/number/NumberType.scala:68:19       0.001 ║
+% [  Info  ] ╟┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╢
+% [  Info  ] ║ total: 10   valid: 10   (8 from cache) invalid: 0    unknown: 0    time:   1.882                                                                                                                  ║
+% [  Info  ] ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
+% [  Info  ] Shutting down executor service.
+% \end{lstlisting}
+
+
+
+% \begin{figure}
+% 	\centering
+% 		\includegraphics[width=\textwidth]{final_verify_output}
+% 	\caption{Output of Stainless verification for addition with 0 of Bitcoin-S-Cores CurrencyUnit}
+% \end{figure}
 
 The verified code.
 \lstinputlisting[style=scala]{../code/currsniporig/src/main/scala/code/end/Code.scala}
